@@ -4,6 +4,8 @@ Changelog
 3.1 - unreleased
 ----------------
 
+- Remove ``SessionPlugin.validate(ticket)`` method, it was not required.
+  [elro]
 
 3.1b1 - 2010-10-18
 ------------------
